applications/gitlab/templates/httproute.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: httproute-gitlab
#   namespace: immich
# spec:
#   hostnames:
#     - gitlab.linuxadmin.eu
#   parentRefs:
#     - group: gateway.networking.k8s.io
#       kind: Gateway
#       name: cilium-gateway-https
#       namespace: kube-system
#   rules:
#     - backendRefs:
#         - group: ''
#           kind: Service
#           name: gitlab-webservice-default
#           port: 8181
#           weight: 1
#       matches:
#         - path:
#             type: PathPrefix
#             value: /
#

# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: gitlab-gateway
#   namespace: gitlab
# spec:
#   gatewayClassName: cilium
#   addresses:
#     - type: IPAddress
#       value: 192.168.0.222
#   listeners:
#   - name: https
#     protocol: HTTPS
#     port: 8043
#     hostname: gitlab.linuxadmin.eu
#     tls:
#       certificateRefs:
#         - group: ''
#           kind: Secret
#           name: gitlab-gitlab-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-webservice-default
  namespace: gitlab
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway-https
      namespace: kube-system
  # parentRefs:
  # - name: gitlab-gateway
  #   namespace: gitlab
  hostnames:
  - gitlab.linuxadmin.eu
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: gitlab-webservice-default
      port: 8181
