applications/gitlab/templates/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gitlab
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:8.10
        command: ["redis-server", "--appendonly", "yes", "--protected-mode", "no"]
        ports:
        - containerPort: 6379
          name: redis
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            memory: "512Mi"
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data-gitlab-redis-master-0
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: gitlab
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: redis
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-gitlab-namespace
  namespace: gitlab
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: gitlab
    ports:
    - protocol: TCP
      port: 6379
